<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rl_main_layout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/cv_toolbar"
                android:elevation="@dimen/padding_x_large">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_get_city_name"
                    android:hint="@string/search_places"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:drawablePadding="@dimen/padding_large"
                    android:paddingStart="@dimen/padding_small"
                    android:background="@color/white" />


            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rl_sub_layout"
                android:layout_below="@+id/cv_toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/padding_large"
                    android:layout_marginStart="@dimen/padding_x_large"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/main">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date_time"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_large"
                        android:text="@string/demo_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:id="@+id/max_temp"
                            android:text="@string/day"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/min_temp"
                            android:text="@string/day"
                            android:textSize="@dimen/text_large" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/temp"
                            android:text="@string/main_temp"
                            android:textSize="@dimen/text_super_large" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="@dimen/padding_large"
                            android:layout_marginEnd="@dimen/padding_large"
                            android:id="@+id/weatherIcon"
                            android:background="@drawable/sun" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/feels_like"
                            android:text="@string/feels_alike"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:layout_weight="3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/weather_type"
                            android:text="@string/weather_type"
                            android:textSize="@dimen/text_large" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/details1"
                    android:layout_below="@+id/main"
                    android:layout_margin="@dimen/padding_x_large"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:elevation="@dimen/padding_large"
                        app:cardCornerRadius="@dimen/padding_small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="50dp"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:src="@drawable/humidity" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/humidity"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:text="12" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:elevation="@dimen/padding_large"
                        app:cardCornerRadius="@dimen/padding_small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="50dp"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:src="@drawable/barometer" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pressure"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:text="12" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/details1"
                    android:layout_marginLeft="@dimen/padding_x_large"
                    android:layout_marginRight="@dimen/padding_x_large"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:elevation="@dimen/padding_large"
                        app:cardCornerRadius="@dimen/padding_small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="50dp"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:src="@drawable/wind" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/wind_speed"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:text="12" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:elevation="@dimen/padding_large"
                        app:cardCornerRadius="@dimen/padding_small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="50dp"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:src="@drawable/sunset" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sunset"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="12" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</layout>